Add _JAVA_OPTIONS explanation to README